dto arrangement