@@ -1,6 +1,7 @@
 package com.rrss.backend.dto;
 
 import com.rrss.backend.model.Review;
+import com.rrss.backend.model.ReviewReply;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -10,8 +11,7 @@ public record ReviewDto(
         ReviewProductDto reviewProductDto,
         ReviewUserDto userDto,
         List<FieldScoreDto> fieldScoreDtos,
-        List<FlagDto> flagDtos,
-        // reply
+        ReviewReplyDto reviewReplyDto,
         String comment
 ) {
     public static ReviewDto convert (Review from) {
@@ -19,8 +19,11 @@ public record ReviewDto(
                 from.getId(),
                 ReviewProductDto.convert(from.getProduct()),
                 ReviewUserDto.convert(from.getUser()),
-                from.getScores().stream().map(FieldScoreDto::convert).collect(Collectors.toList()),
-                from.getFlags().stream().map(FlagDto::convert).collect(Collectors.toList()),
+                from.getScores()
+                        .stream()
+                        .map(FieldScoreDto::convert)
+                        .toList(),
+                ReviewReplyDto.convert(from.getReply()),
                 from.getComment()
         );
     }
