@@ -4,14 +4,17 @@ import com.rrss.backend.model.Merchant;
 
 public record UserMerchantDto(
         String id
-        //List<MerchantReviewReplyDto> reviewReplyDtos,
+        MerchantReviewReplyDto reviewReplyDto //TODO YAP BUNU
 ) {
     public static UserMerchantDto convert(Merchant from) {
         if (from == null)
             return null;
         return new UserMerchantDto(
-                from.getId()
-                //from.getReviewReplies().stream().map(MerchantReviewReplyDto::convert).collect(Collectors.toList())
+                from.getId(),
+                from.getReviewReplies()
+                        .stream()
+                        .map(MerchantReviewReplyDto::convert)
+                        .toList()
         );
     }
 }
